<resources>
    <string name="app_name">Instagram</string>
    <string name="log_in">Log In</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="prompt_description">Add a caption</string>
    <string name="post">Post</string>
    <string name="refresh">Refresh</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="log_out">LOG OUT</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="post_username">username</string>
    <string name="post_description">description</string>
    <string name="create_post">CREATE POST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
